--- a/install_wiki.yml
+++ b/install_wiki.yml
@@ -1,8 +1,11 @@
 ---
 
+- name: ping
   hosts: group_mediawiki
   become: yes
   tasks:
+    - name: ping_meg_serv
+      ping:
 
 # TOOLS
     - name: Install required tools
