sans lien symbolique

--- a/install_wiki.yml
+++ b/install_wiki.yml
@@ -13,8 +13,9 @@
         name: "{{ item }}"
         state: present
       loop:
-          - unzip
-          - gnupg
+            - unzip
+            - gnupg
+
 
     # PHP
     - name: Add the ondrej PHP PPA
@@ -26,10 +27,10 @@
         name: "{{ item }}"
         state: present
       loop:
-        - php
-        - php-fpm
-        - php-mysql
-        - php-xml
+        - php5.6
+        - php5.6-fpm
+        - php5.6-mysql
+        - php5.6-xml
 
     - name: remove apache2
       apt:
@@ -54,7 +55,7 @@
     - name: Generate new root password
       command: openssl rand -hex 7
       args:
-        creates: /root/.my.cnf
+        creates: /root/.my.conf
       register: mysql_new_root_pass
 
     - name: remove anonymous users
@@ -107,13 +108,13 @@
       command: php --version
       register: php_version
     - set_fact:
-        fpm_sock: /run/php/php7.{{ php_version.stdout.split(" ")[1].split(".")[1] }}-fpm.sock
+        fpm_sock: /run/php/php5.{{ php_version.stdout.split(" ")[1].split(".")[1] }}-fpm.sock
       when: ansible_distribution == 'Ubuntu'
 
     - name: create nginx config
       template:
-        src: templates/nginx/default.j2
-        dest: /etc/nginx/sites-available/default
+        src: templates/nginx/wiki.j2
+        dest: /etc/nginx/sites-available/wiki
       notify: restart nginx
 
   # MediaWiki
@@ -134,28 +135,15 @@
         dest: /appli/projects/md1/nginx
         state: directory
 
-    - name: Create a symbolic link
-      file:
-        src: /var/www/html
-        dest: /appli/projects/md1/nginx
-        state: link
-        owner: root
-        group: root
-        mode: '0755'
-
-    - name: Rename symbolic link
-      command: mv /var/www/html/nginx /var/www/html/wiki
-
     - name: Copy MediaWiki files
-      command: cp -a /appli/wikidevops/LIVR/wiki_devops. /var/www/html/wiki
+      command: cp -a /appli/wikidevops/LIVR/wiki_devops/. /appli/projects/md1/nginx
       args:
-        creates: /var/www/html/wiki/maintenance/install.php
+        creates: /appli/projects/md1/nginx/maintenance/install.php
 
     - name: Create MediaWiki MySQL database
       mysql_db:
         name: wiki
         state: present
-
     - name: Create mediawiki MySQL user
       mysql_user:
         name: wiki
@@ -166,17 +154,17 @@
     - name: Create LocalSettings.php
       template:
         src: templates/wiki/LocalSettings.php.jinja
-        dest: /var/www/html/wiki/LocalSettings.php
+        dest: /appli/projects/md1/nginx/LocalSettings.php
 
     - name: Does the database exist?
-      command: mysql -u root wiki -e "SELECT ID FROM wiki.users LIMIT 1;"
+      command: mysql -u root wiki -e "SELECT ID FROM mysql.users LIMIT 1;"
       register: db_exist
       ignore_errors: true
 
     - name: Copy MediaWiki DB
       copy:
         src: files/backup.sql
-        dest: appli/wikidevops/LIVR/backup.sql
+        dest: /appli/wikidevops/LIVR/backup.sql
       when: db_exist.rc > 0
 
     - name: Import MediaWiki DB
