--- a/install_wiki.yml
+++ b/install_wiki.yml
@@ -31,6 +31,12 @@
         - php5.6-fpm
         - php5.6-mysql
         - php5.6-xml
+        - php5.6-curl
+        - php5.6-gd
+        - php5.6-xml
+        - php5.6-intl
+        - php5.6-json
+        - php5.6-mbstring
 
     - name: remove apache2
       apt:
