--- a/install_wiki.yml
+++ b/install_wiki.yml
@@ -157,12 +157,13 @@
         password: password
         priv: wiki.*:ALL
 
-    - name: Create LocalSettings.php
-      template:
-        src: templates/wiki/LocalSettings.php.jinja
-        dest: /appli/projects/md1/nginx/LocalSettings.php
+    - name: Install php
+      command: php /appli/projects/md1/nginx/maintenance/install.php --dbname=wiki --dbserver=localhost --dbuser=wiki --dbpass=password --lang=fr --pass=password --scriptpath=/wiki "wiki" "wiki"
 
-    
+    - name: Does the database exist?
+      command: mysql -u root wiki -e "SELECT ID FROM mysql.users LIMIT 1;"
+      register: db_exist
+      ignore_errors: true
 
     - name: Copy MediaWiki DB
       copy:
